--- a/package.json
+++ b/package.json
@@ -6,25 +6,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.0",
-    "moment": "^2.26.0",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
-    "msal": "^1.3.1",
+    "msal": "^1.4.3",
+    "node-forge": ">=0.10.0",
     "normalize.css": "^8.0.1",
-    "popper.js": "^1.16.0",
-    "react": "^16.13.1",
+    "object-path": ">=0.11.5",
+    "popper.js": "^1.16.1",
+    "react": "^16.14.0",
     "react-aad-msal": "^2.3.5",
     "react-block-ui": "^1.3.3",
-    "react-bootstrap": "^1.0.1",
-    "react-datepicker": "^3.0.0",
+    "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.3.0",
     "react-day-picker": "^7.4.8",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sidebar": "^3.0.2",
-    "typescript": "^3.9.5"
+    "serialize-javascript": ">=3.1.0",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
